--- a/Quality/Quality/Areas/BulkFGT/Views/MockupOvenTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/MockupOvenTest/Index.cshtml
@@ -426,7 +426,7 @@
                                         @Html.TextBoxFor(o => o.HTPlate, "", new { @type = "number", @class = "OnlyEdit", @step = "1" })
 
                                     </td>
-                                    <td colspan="2"><h5>Pell Off (hot/cold)(peel)</h5></td>
+                                    <td colspan="2"><h5>Peel off (Hot/ Warm/ Cool)</h5></td>
                                     <td>
                                         @Html.TextBoxFor(o => o.HTPellOff, "", new { @class = "OnlyEdit" })
                                     </td>
