--- a/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/_Tab3_Layout.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/_Tab3_Layout.cshtml
@@ -13,14 +13,16 @@
     }
     .aiCommentTooltipText {
         visibility: hidden;
-        position: absolute;
-        z-index: 1;
-        background-color:pink;
-        border:1px solid black;
-        border-radius:2px;
-        color:black;
-        font-size:1rem;
-        padding:0.5rem;
+        position: fixed;
+        top: 70%; /* 距離上方50%的位置 */
+        left: 15%; /* 距離左邊50%的位置 */
+        z-index: 9999;
+        background-color: pink;
+        border: 1px solid black;
+        border-radius: 2px;
+        color: black;
+        font-size: 1rem;
+        padding: 0.5rem;
     }
     .aiCommentTooltip:hover .aiCommentTooltipText {
         visibility: visible;
