--- a/Quality/Quality/Areas/StyleManagement/Views/StyleResult/_Tab4_Layout.cshtml
+++ b/Quality/Quality/Areas/StyleManagement/Views/StyleResult/_Tab4_Layout.cshtml
@@ -22,7 +22,9 @@
     .aiCommentTooltipText {
         visibility: hidden;
         position: fixed;
-        z-index: 1;
+        top: 70%; /* 距離上方50%的位置 */
+        left: 15%; /* 距離左邊50%的位置 */
+        z-index: 9999;
         background-color: pink;
         border: 1px solid black;
         border-radius: 2px;
