--- a/Quality/Quality/Areas/BulkFGT/Views/HeatTransferWash/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/HeatTransferWash/Index.cshtml
@@ -383,11 +383,11 @@
                                 <tr>
 
                                     <th style="width: 13vw;"><h4>Fabric Ref No.</h4></th>
-                                    <th style="width: 13vw; "><h4>HT Ref No.</h4></th>
-                                    <th style="width: 5vw;"><h4>HT-Temperature</h4></th>
-                                    <th style="width: 6vw;"><h4>HT-Time(Sec)</h4></th>
-                                    <th style="width: 6vw;"><h4>2nd HT-Time(Sec)</h4></th>
-                                    <th style="width: 6vw; "><h4>HT-Pressure</h4></th>
+                                    <th style="width: 13vw; "><h4>Artwork Ref No.</h4></th>
+                                    <th style="width: 5vw;"><h4>Temperature</h4></th>
+                                    <th style="width: 6vw;"><h4>Time(Sec)</h4></th>
+                                    <th style="width: 6vw;"><h4>2nd Time(Sec)</h4></th>
+                                    <th style="width: 6vw; "><h4>Pressure</h4></th>
                                     <th style="width: 5vw;"><h4>Peel Off</h4></th>
                                     <th style="width: 5vw;"><h4>Washing Cycles</h4></th>
                                     <th style="width: 5vw;"><h4>Washing ℃</h4></th>
@@ -1056,17 +1056,19 @@
         $('.btnRefnoSelectItem').on('click', function () {
             var targetID = $(this).attr("targetID");
             var OrderID = $("#Main_OrderID").val();
+            var artWork = $("#Main_ArtworkTypeID").val();
             if (OrderID == '') {
                 msg.WithError('Please input SP#.');
                 return;
             }
-            var para = `?TargetID=${targetID}&OrderID=${OrderID}`;
-            window.open('@Url.Action("Po_Supp_Detail_RefnoList", "PublicWondow",new{Area=""})' + para, 'Style', config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            var para = `?TargetID=${targetID}&OrderID=${OrderID}&ArtWork=${artWork}`;
+            window.open('@Url.Action("HeatTransferWash_RefnoList", "PublicWondow",new{Area=""})' + para, 'Refno', config = 'toolbar=no,status=no,location=no,width=400,height=650');
         });
 
         $('.FabricRefNoTxt').unbind('blur').blur(function () {
             var targetID = $(this).attr("ID");
             var orderID = $('#Main_OrderID').val();
+            var artWork = $("#Main_ArtworkTypeID").val();
             var refno = $(this).val();
             if (refno == '') {
                 return;
@@ -1077,10 +1079,10 @@
                 return;
             }
             $.ajax({
-                url: "@Url.Action("Po_Supp_Detail_RefnoList", "PublicWondow",new { Area=""})",
+                url: "@Url.Action("HeatTransferWash_RefnoList", "PublicWondow",new { Area=""})",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
-                data: JSON.stringify({ OrderID: orderID, Refno: refno , TargetID: targetID, ReturnType: "JSON" }),
+                data: JSON.stringify({ OrderID: orderID, Refno: refno, TargetID: targetID, ReturnType: "JSON", ArtWork: artWork }),
                 async: true,
                 success: function (data) {
                     if (data == '') {
@@ -1099,17 +1101,19 @@
         $('.btnRefnoSelectItem').on('click', function () {
             var targetID = $(this).attr("targetID");
             var OrderID = $("#Main_OrderID").val();
+            var artWork = $("#Main_ArtworkTypeID").val();
             if (OrderID == '') {
                 msg.WithError('Please input SP#.');
                 return;
             }
-            var para = `?TargetID=${targetID}&OrderID=${OrderID}`;
-            window.open('@Url.Action("Po_Supp_Detail_RefnoList", "PublicWondow",new{Area=""})' + para, 'Style', config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            var para = `?TargetID=${targetID}&OrderID=${OrderID}&ArtWork=${artWork}`;
+            window.open('@Url.Action("HeatTransferWash_RefnoList", "PublicWondow",new{Area=""})' + para, 'Style', config = 'toolbar=no,status=no,location=no,width=400,height=650');
         });
 
         $('.HTRefNoTxt').unbind('blur').blur(function () {
             var targetID = $(this).attr("ID");
             var orderID = $('#Main_OrderID').val();
+            var artWork = $("#Main_ArtworkTypeID").val();
             var refno = $(this).val();
             if (refno == '') {
                 return;
@@ -1123,10 +1127,10 @@
                 return;
             }
             $.ajax({
-                url: "@Url.Action("Po_Supp_Detail_RefnoList", "PublicWondow",new { Area=""})",
+                url: "@Url.Action("HeatTransferWash_RefnoList", "PublicWondow",new { Area=""})",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
-                data: JSON.stringify({ OrderID: orderID, Refno: refno, MtlTypeID: 'HEAT TRANS', TargetID: targetID, ReturnType: "JSON" }),
+                data: JSON.stringify({ OrderID: orderID, Refno: refno, MtlTypeID: 'HEAT TRANS', TargetID: targetID, ReturnType: "JSON"  ,ArtWork: artWork }),
                 async: true,
                 success: function (data) {
                     if (data == '') {
@@ -1146,12 +1150,13 @@
         $('.btnHTRefNoSelectItem').on('click', function () {
             var targetID = $(this).attr("targetID");
             var OrderID = $("#Main_OrderID").val();
+            var artWork = $("#Main_ArtworkTypeID").val();
             if (OrderID == '') {
                 msg.WithError('Please input SP#.');
                 return;
             }
-            var para = `?TargetID=${targetID}&OrderID=${OrderID}&MtlTypeID=HEAT TRANS`;
-            window.open('@Url.Action("Po_Supp_Detail_RefnoList", "PublicWondow",new{Area=""})' + para, 'Style', config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            var para = `?TargetID=${targetID}&OrderID=${OrderID}&ArtWork=${artWork}`;
+            window.open('@Url.Action("HeatTransferWash_RefnoList", "PublicWondow",new{Area=""})' + para, 'Style', config = 'toolbar=no,status=no,location=no,width=400,height=650');
         });
 
     }
