--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/AddDefect.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/AddDefect.cshtml
@@ -182,9 +182,9 @@
                 var defectCode = $(this).val();
                 var foundGroup = [];
                 if (defectCode != '') {
-                    adata.filter(function (group1) {
+                    adata.forEach(function (group1) {
                         var isFoundit = false;
-                        group1[4].filter(function (group2) {
+                        group1[5].forEach(function (group2) {
                             var isExists = group2[1].includes(defectCode);
                             if (isExists) {
                                 isFoundit = true;
