--- a/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
@@ -364,6 +364,16 @@
                                                 Article = item.Article,
                                             });
                                             break;
+                                        case string a when a.Contains("Random Tumble Pilling Test"):
+                                            link = Url.Action("IndexGet", "RandomTumblePillingTest", new
+                                            {
+                                                ReportNo = item.ReportNo,
+                                                BrandID = item.BrandID,
+                                                SeasonID = item.SeasonID,
+                                                StyleID = item.StyleID,
+                                                Article = item.Article,
+                                            });
+                                            break;
                                         default:
                                             link = "#";
                                             break;
@@ -612,9 +622,10 @@
             let includes_SALIVA = currentType.toUpperCase().includes("SALIVA");
             let includes_Yellowing = currentType.toUpperCase().includes("YELLOWING");
             let includes_Martindale = currentType.toUpperCase().includes("MARTINDALE");
+            let includes_RandomTumble = currentType.toUpperCase().includes("RandomTumble");
 
             if (!includes_MOCKUP && !includes_HTWash && !includes_Moistureh && !includes_Aging && !includes_SALIVA
-                && !includes_Yellowing && !includes_Martindale) {
+                && !includes_Yellowing && !includes_Martindale && !includes_RandomTumble) {
                 $(".mockupOnly").val('');
                 $(".mockupOnly").attr("disabled", "disabled");
             }
