--- a/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
@@ -354,6 +354,16 @@
                                                 Article = item.Article,
                                             });
                                             break;
+                                        case string a when a.Contains("Water Absorbency Test"):
+                                            link = Url.Action("IndexGet", "WaterAbsorbency", new
+                                            {
+                                                ReportNo = item.ReportNo,
+                                                BrandID = item.BrandID,
+                                                SeasonID = item.SeasonID,
+                                                StyleID = item.StyleID,
+                                                Article = item.Article,
+                                            });
+                                            break;
                                         default:
                                             link = "#";
                                             break;
@@ -601,8 +611,9 @@
             let includes_Aging = currentType.toUpperCase().includes("AGING");
             let includes_SALIVA = currentType.toUpperCase().includes("SALIVA");
             let includes_Yellowing = currentType.toUpperCase().includes("YELLOWING");
+            let includes_Absorbency = currentType.toUpperCase().includes("ABSORBENCY");
 
-            if (!includes_MOCKUP && !includes_HTWash && !includes_Moistureh && !includes_Aging && !includes_SALIVA && !includes_Yellowing) {
+            if (!includes_MOCKUP && !includes_HTWash && !includes_Moistureh && !includes_Aging && !includes_SALIVA && !includes_Yellowing && !includes_Absorbency) {
                 $(".mockupOnly").val('');
                 $(".mockupOnly").attr("disabled", "disabled");
             }
