ISP20230647 - 1. 調整General和Check List傳入BrandID 2. Setting頁面後端加上，若不是Final或3rd，AQL一律不給值 3. Measurement加上Stage條件

--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
@@ -90,7 +90,7 @@
             </tbody>
         </table>
         <div style="border:0px;padding:2vh;">
-            @if (Model.BrandID == "LLL")
+            @if (Model.BrandID == "LLL" && Model.InspectionStage == "Final")
             {
                 <span style="font-size: 2vh; font-weight: 900; color: #999999 ">At least</span>
                 <span id="txtMeasurementRemainingAmount" style="font-size: 2vh; font-weight: 900; color: red ">@Model.MeasurementRemainingAmount</span>
