--- a/Quality/Quality/Areas/BulkFGT/Views/SalivaFastnessTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/SalivaFastnessTest/Index.cshtml
@@ -374,7 +374,7 @@
                         </div>
 
                         <div class="MainAreaItem odd">
-                            <h4 class="colTitle">Subimt Date</h4>
+                            <h4 class="colTitle">Submit Date</h4>
 
                         </div>
 
